--- a/index.html
+++ b/index.html
@@ -16,27 +16,9 @@
 </head>
 <body>
 
-<h2>Direct Download Link Generator</h2><script type="text/javascript">
-	atOptions = {
-		'key' : '1d872e54c12542b55fb8e4593372b522',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/1d872e54c12542b55fb8e4593372b522/invoke.js"></scr' + 'ipt>');
-</script><div><br /></div>
+<h2>Direct Download Link Generator</h2>
 <div id="Main_Block">
-	<script type="text/javascript">
-	atOptions = {
-		'key' : '2be5ca78432aed03ddc12c5e0ad2f747',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/2be5ca78432aed03ddc12c5e0ad2f747/invoke.js"></scr' + 'ipt>');
-</script>
+	
 
   <label><b>Enter Google Drive File's Share Link:</b> </label>
   <textarea autofocus="" id="GDurl" max-cols="2" max-rows="2" name="GDurl" placeholder="https://drive.google.com/file/d/1mMKLWNb-w6T4ciJeRMLmLIHqLzf4xs_W/view?usp=sharing" style="font-size: 13px;"></textarea>  
@@ -87,16 +69,6 @@ document.getElementById(id).select();
   document.getElementById('btn_cpy').innerHTML = "Copy Generated Link"
   }, 5000);
 }
-</script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : '1d872e54c12542b55fb8e4593372b522',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/1d872e54c12542b55fb8e4593372b522/invoke.js"></scr' + 'ipt>');
 </script>
 </div>
 </body>
